--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,10 +4,11 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [{
-    "type": "chrome",
+    "name": "Firefox",
+    "type": "firefox",
     "request": "launch",
-    "name": "Launch Chrome against localhost",
-    "url": "http://localhost:3000",
+    "reAttach": true,
+    "url": "localhost:3000",
     "webRoot": "${workspaceFolder}"
   }]
 }
